Added Erkentnisse and some labels

--- a/Schlussteil.tex
+++ b/Schlussteil.tex
@@ -3,7 +3,8 @@
 
 
 \section{Erkenntnisse}
-
+Der Laborversuch \flqq{}Synchronmaschine\frqq{} dient zum einen als Repetition der Theorie und bringt zum andern einen praktischen Bezug zu Maschinenkennwerten. Kern des Versuches bildet die Ermittlung der Maschinenkennwerte (Abschnitt \ref{maschinenkennwerte}). Daraus resultiert die Erfahrung, wie eine Maschine auf Grund von Messungen klassifiziert werden kann. Besonders interessant und lehrreich ist dabei die Anwendung des Schwebeverfahren (Abschnitt \ref{schwebeverfahren}). Durch dessen Anwendung lässt sich der Einfluss des Luftspaltes bei einer Schenkelpolmaschine auf die Induktivität im Ersatzschaltbild gut repetieren.\\
+Der Versuchsteil der die SM als Generator im Inselbetrieb (Abschnitt \ref{inselbetrieb}) verwendet, dient als ergiebige Übung zum Erstellen von Zeigerdiagrammen. Ausserdem ermöglicht er den Vergleich von Resultaten, die auf verschiedenen Wegen gemessen und errechnet wurden. Dies zeigt auf, wie die Messungen von einander abweichen und welchen Einfluss Vernachlässigungen haben. Der letzte Versuchsteil mit der SM am Netz (Abschnitt \ref{netz}) bringt vor allem anwendungsbezogene Erfahrungen. Es zeigt sich welchen Aufwand die nötige Synchronisation bringt und welche Bedeutung eine Dämpferwicklung hat.   
 
 
 \section{Fazit} %über gelerntes und Kommentare
