--- a/Versuch.tex
+++ b/Versuch.tex
@@ -99,7 +99,7 @@ Da es sich um eine Schleifringläufer ASM handelt, kann über den Rotorkreis ein
 
 
 
-\section{Maschinenkennwerte}
+\section{Maschinenkennwerte}\label{maschinenkennwerte}
 In diesem Abschnitt werden die charakteristischen Kennwerte der SM ermittelt.
 
 \subsection{Leerlaufkennlinie}
@@ -241,7 +241,7 @@ $$\underline{\underline{L_d}} = \frac{150 V }{j \cdot 8 A \cdot 2 \cdot \pi \cdo
 
 
 
-\subsection{Schwebeverfahren}
+\subsection{Schwebeverfahren} \label{schwebeverfahren}
 Zur Ermittlung der Längs -und Querreaktanz wird in diesem Versuch das Schwebeverfahren angewendet. Dazu wird die SM über die Gleichstrommaschine mit einem kleinen Schlupf betrieben. Gleichzeitig wird der Stator der SM mit reduzierter Spannung (Variac) gespeist. Die Erregerwicklung wird für diesen Versuch nicht betrieben.\\
 \vspace{0.4cm}
 
@@ -318,7 +318,7 @@ $ \underline{\underline{L_q}}= \frac{\frac{\hat{U}_1}{\sqrt{2}}}{j \cdot 2 \cdot
 
 
 \newpage
-\section{SM als Generator im Inselbetrieb}
+\section{SM als Generator im Inselbetrieb}\label{inselbetrieb}
 \subsection{Belastungskennlinie}
 Bei diesem Versuch wirkt die Synchronmaschine als Generator im Inselbetrieb. Die Gleichstrommaschine dient als Antrieb.
 \vspace{0.3cm}
@@ -379,7 +379,7 @@ Zuerst wurde die SM in den Leerlaufbetrieb versetzt um die Polradspannung bei ei
 \hline
  $\Delta U$ aus $L_q$ mit Gleichungen~\ref{eq:deltaU} & $223$ & $4.85$ & 62.5& 231.6& $15.6\degree$ \\
 \hline
- $U_p$ aus Abbildung \ref{fig:Leerlauf} mit Gleichungen~\ref{eq:Up} & $223$ & $4.85$ & 53& 229.2&  $13.4\degree$\\
+ $U_p$ aus Abbildung \ref{fig:Leerlaufkennlinie} mit Gleichungen~\ref{eq:Up} & $223$ & $4.85$ & 53& 229.2&  $13.4\degree$\\
 \hline
 \end{tabular}
 
@@ -640,7 +640,7 @@ Die SM wurde für die Messung einem induktiven Laststoss ausgesetzt. In der Abbi
 
 \newpage
 \addtocontents{toc}{\protect\newpage}  % seitenumbruch im Inhaltsverzeichnis erzwingen
-\section{SM am Netz}
+\section{SM am Netz}\label{netz}
 
 \vspace{0.3cm}
 \begin{figure}[H]
