--- a/Schlussteil.tex
+++ b/Schlussteil.tex
@@ -8,7 +8,7 @@ Der Versuchsteil der die SM als Generator im Inselbetrieb (Abschnitt \ref{inselb
 
 
 \section{Fazit} %über gelerntes und Kommentare
-
+Die Versuche erschienen uns sehr sinnvoll und wir konnten viele Unklarheiten ausfindig machen und klären. Theorie und Praxis liessen sich optimal kombinieren. Der Stoff vom Unterricht konnte hervorragend repetiert werden und unser Bild der SM besteht nun nicht mehr nur aus einem Ersatzschaltbild. Die Versuchsreihe lässt sich in den zwei Nachmittagen zeitlich gut durchführen, falls das Labor seriös Vorbereitet wurde (es Reicht auch für die freiwilligen Teile). Trotzdem erscheinen uns freiwilligen Teile als Sinnvoll, damit die Klärung von allenfalls auftretende Unklarheiten Platz haben. Von uns ausgesehen sind alle Teilaufgaben Sinnvoll und Lehrreich.
 
 
 
