--- a/Versuch.tex
+++ b/Versuch.tex
@@ -336,7 +336,7 @@ Bei konstantem  Erregerstrom und konstanter Drehzahl wird die Phasenspannung $U_
 \item \makebox[5cm][l]{$I_{err} = $ 1.1 A  }            konstanter Erregerstrom
 \item \makebox[5cm][l]{$n =  1500 \frac{1}{min}$}				konstante Drehzahl
 \end{itemize}
-\newpage
+%\newpage
 
 
 Zuerst wurde die SM in den Leerlaufbetrieb versetzt um die Polradspannung bei einem Erregerstrom von 1.1 A zu ermitteln. Für $U_1$ resp. $U_{ph}$ konnte man so eine Spannung von 228V messen, dieser Wert kann für die Polradspannung $U_p$ bei den folgenden Betriebsarten verwendete werden. 
@@ -362,11 +362,10 @@ Zuerst wurde die SM in den Leerlaufbetrieb versetzt um die Polradspannung bei ei
 \underline{Messresultate:}\\
 \vspace{0.3cm}
 
-
 \begin{itemize}
-\item \makebox[5cm][l]{Polradwinkel $\varphi$  }            6\degree
-\item \makebox[5cm][l]{$U_{ph_{eff}}$   }            223 V
-\item \makebox[5cm][l]{$I_{ph_{eff}}$   }            4.85 A
+\item \makebox[5cm][l]{$\varphi = 6\degree$  }            Polradwinkel
+\item \makebox[5cm][l]{$U_{ph_{eff}} = 223 V$   }         Effektivwert der Phasenspannung
+\item \makebox[5cm][l]{$I_{ph_{eff}} = 4.85 A$   }        Effektivwert des Phasenstrom    
 \end{itemize}
 
 \vspace{0.5cm}
@@ -427,15 +426,15 @@ In der Berechnung wird $L_q$ verwendet, da der Strom $I_1$ bei ohmscher Last ann
     \label{fig:U/I_R}
 \end{figure}
 
-\textcolor{red}{@Andy: bisch ufs gliche cho? Zusätzlich noch begründen wiso Querreaktanz relevant ist -> gemacht! Verständlich?\\
-@Theo: Gleichung 1 ond Gleichung 2 beni of s glich echo ond  ech hätti d Abwichig au so begröndet. Aber d Glichig 3 esch mer ned ganz klar, resp. woher hesch die 397 Volt ? ok ha d Leerlaufkennlinie :P, aber wiso hesch dor worzle 3 grächnet ? esch demfall d Achsebeschreftig falsch ? well det hemmer ja au d Phasespannig gmässe - Phase zu Sternpunkt\\
-Theo: Bisch sicher? de isch si aber huärä höch und de würd d'Rächnig nid uf ga... hei mär dert nid Phase-Phase gmässä?\\
-Andy: Ja ech be äbe nöme secher, ha gmeint mer hend no disskutiert vo wo zo wo dassmer mässid (Abbildung 2) ond send zom entschloss cho, dasses zom Sternponkt gohd, obwohl es de eigendlech werkli kei senn macht :(\\
-Theo: s'Muäss eigändläch d'Phase-Phase-Spannig si. Omlin het sogar no gseit, mit den $I_e =1.1$ chöm mä öpä gad uf 230V $U_1$\\
-Andy: Ja esch guet, aber Phasespannig bedütet för mech Phas -> Sternponkt, dorom mössts denn wohl verkettete Spannung heisse bide Abbildung 2.\\
-Andere Frage: Bis wenn moss mer de Laborbrecht fertig ha ?\\
-Theo: Auso i glob 10 Tag nach em Versuech! Uaso am letzä Mänti... Iz isch dfrag ob mär nä hüt fertig mache oder ig am Omlin schribä das er bis am Friti bi im isch... I passe Abbiudig 2 a (i tuä eifach scho der aues dür sqrt{3} teilä...\\ Andy: ech wörd säge mer macheds bes am Fritig fertig, de chömmer morn no gschwend bespräche was mer no alles muess mache. Schriebsch du demfall im Omlin es Mail?}
-\newpage
+%\textcolor{red}{@Andy: bisch ufs gliche cho? Zusätzlich noch begründen wiso Querreaktanz relevant ist -> gemacht! Verständlich?\\
+%@Theo: Gleichung 1 ond Gleichung 2 beni of s glich echo ond  ech hätti d Abwichig au so begröndet. Aber d Glichig 3 esch mer ned ganz klar, resp. woher hesch die 397 Volt ? ok ha d Leerlaufkennlinie :P, aber wiso hesch dor worzle 3 grächnet ? esch demfall d Achsebeschreftig falsch ? well det hemmer ja au d Phasespannig gmässe - Phase zu Sternpunkt\\
+%Theo: Bisch sicher? de isch si aber huärä höch und de würd d'Rächnig nid uf ga... hei mär dert nid Phase-Phase gmässä?\\
+%Andy: Ja ech be äbe nöme secher, ha gmeint mer hend no disskutiert vo wo zo wo dassmer mässid (Abbildung 2) ond send zom entschloss cho, dasses zom Sternponkt gohd, obwohl es de eigendlech werkli kei senn macht :(\\
+%Theo: s'Muäss eigändläch d'Phase-Phase-Spannig si. Omlin het sogar no gseit, mit den $I_e =1.1$ chöm mä öpä gad uf 230V $U_1$\\
+%Andy: Ja esch guet, aber Phasespannig bedütet för mech Phas -> Sternponkt, dorom mössts denn wohl verkettete Spannung heisse bide Abbildung 2.\\
+%Andere Frage: Bis wenn moss mer de Laborbrecht fertig ha ?\\
+%Theo: Auso i glob 10 Tag nach em Versuech! Uaso am letzä Mänti... Iz isch dfrag ob mär nä hüt fertig mache oder ig am Omlin schribä das er bis am Friti bi im isch... I passe Abbiudig 2 a (i tuä eifach scho der aues dür sqrt{3} teilä...\\ Andy: ech wörd säge mer macheds bes am Fritig fertig, de chömmer morn no gschwend bespräche was mer no alles muess mache. Schriebsch du demfall im Omlin es Mail?}
+%\newpage
 
 
 
@@ -443,13 +442,13 @@ Theo: Auso i glob 10 Tag nach em Versuech! Uaso am letzä Mänti... Iz isch dfra
 \subsubsection{Kapazitive Belastung}
 
 \begin{figure}[H]
-\begin{minipage}[t]{0.55\textwidth}
+\begin{minipage}[t]{0.65\textwidth}
 \centering
 \includegraphics[width=\textwidth]{SM_Insel_1PH_C.pdf}
 \subcaption{Schema kapazitive Last im EZS}
 \label{fig:SM_Insel_1PH_C}
 \end{minipage}
-\begin{minipage}[t]{0.4\textwidth}
+\begin{minipage}[t]{0.3\textwidth}
 \centering
 \includegraphics[width=0.3\textwidth]{631_zeiger_kap}
 \subcaption{Zeigerdiagramm im EZS}
@@ -463,16 +462,16 @@ Theo: Auso i glob 10 Tag nach em Versuech! Uaso am letzä Mänti... Iz isch dfra
 
 
 \begin{itemize}
-\item \makebox[5cm][l]{Polradwinkel $\varphi$  }            1.4\degree
-\item \makebox[5cm][l]{$U_{ph_{eff}}$   }            266 V
-\item \makebox[5cm][l]{$I_{ph_{eff}}$   }            4.8 A
+\item \makebox[5cm][l]{$\varphi = 1.4\degree$  }            Polradwinkel
+\item \makebox[5cm][l]{$U_{ph_{eff}} = 266 V$   }         Effektivwert der Phasenspannung
+\item \makebox[5cm][l]{$I_{ph_{eff}} = 4.8 A$   }        Effektivwert des Phasenstrom    
 \end{itemize}
 
-\vspace{0.5cm}
+\vspace{0.3cm}
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{631_Kapazitiv}
+    \includegraphics[width=0.9\textwidth]{631_Kapazitiv}
     \caption{Messung mit dem KO}
     \label{fig:U/I_C}
 \end{figure}
@@ -495,15 +494,15 @@ An der Messkurve ist zu erkennen, dass der Phasenstrom der Phasenspannung um ca.
 \subsubsection{Induktive Belastung}
 
 \begin{figure}[H]
-\begin{minipage}[t]{0.52\textwidth}
+\begin{minipage}[t]{0.65\textwidth}
 \centering
 \includegraphics[width=\textwidth]{SM_Insel_1PH_L.pdf}
 \subcaption{Schema induktive Last im EZS}
 \label{fig:SM_Insel_1PH_L}
 \end{minipage}
-\begin{minipage}[t]{0.48\textwidth}
+\begin{minipage}[t]{0.3\textwidth}
 \centering
-\includegraphics[width=0.3\textwidth]{631_zeiger_ind}
+\includegraphics[width=0.5\textwidth]{631_zeiger_ind}
 \subcaption{Zeigerdiagramm im EZS}
     \label{fig:ZeigerL}
 \end{minipage}
@@ -515,18 +514,18 @@ An der Messkurve ist zu erkennen, dass der Phasenstrom der Phasenspannung um ca.
 
 
 \begin{itemize}
-\item \makebox[5cm][l]{Polradwinkel $\varphi$  }     0.6\degree
-\item \makebox[5cm][l]{$U_{ph_{eff}}$   }            180 V
-\item \makebox[5cm][l]{$I_{ph_{eff}}$   }            4.8 A
+\item \makebox[5cm][l]{$\varphi = 0.6\degree$  }            Polradwinkel
+\item \makebox[5cm][l]{$U_{ph_{eff}} = 180 V$   }         Effektivwert der Phasenspannung
+\item \makebox[5cm][l]{$I_{ph_{eff}} = 4.8 A$   }        Effektivwert des Phasenstrom    
 \end{itemize}
 
-\vspace{0.5cm}
+\vspace{0.2cm}
 
 \begin{figure}[H]
 \centering
         \includegraphics[ %trim=0.5cm 1cm 0.5cm 1cm,
         % width=0.8\textwidth]{631_Bild6_Induktiv.pdf}
-				width=\textwidth]{631_Induktiv}
+				width=0.9\textwidth]{631_Induktiv}
     \caption{Messung mit dem KO}
     \label{fig:U/I_L}
 \end{figure}
@@ -540,7 +539,7 @@ Die Phasenspannung eilt dem Phasenstrom um 90 \degree voraus. Auch hier ist der 
     \caption{Einfluss Sternpunktbezug}
     \label{fig:EinflussSternpunktL}
 \end{figure}
-Bei Verbundenem Sternpunkt ändert sich der Strom $I_1£$ kaum. Die verwendete Last verfügt also über eine gute Symmetrie.
+Bei Verbundenem Sternpunkt ändert sich der Strom $I_1$ kaum. Die verwendete Last verfügt also über eine gute Symmetrie.
 
 
 
