--- a/Schlussteil.tex
+++ b/Schlussteil.tex
@@ -14,6 +14,7 @@ Die Versuche erschienen uns sehr sinnvoll und wir konnten viele Unklarheiten aus
 
 \section{Verzeichnisse}
 
-Was wodsch do inetätsche ?? Abbildungsverzeichnis, quellen ?? --> Drigschosse
+\addcontentsline{toc}{subsection}{Abbildungsverzeichnis}
+\listoffigures
 
 \section{Anhang}
