--- a/Versuch.tex
+++ b/Versuch.tex
@@ -111,7 +111,7 @@ Da die SM unbelastet ist, fliesst kein Strom $I_1$ durch die Statorwicklung, $\D
     \centering
         \includegraphics[ %trim=0.5cm 0.5cm 0.5cm 0.5cm,
          scale = 0.7]{leerlauf}
-         \caption[]{Leerlaufbetrieb \footnotemark}
+         \caption[Leerlaufbetrieb]{Leerlaufbetrieb \footnotemark}
     \label{fig:Leerlaufbetrieb}
 \end{figure}
 
@@ -568,7 +568,7 @@ Die Regelung ist im Chopper integriert. \\
 \vspace{0.3cm}
 Über ein Potentiometer kann der Sollwert eingestellt werden. Diese Grösse, abzüglich dem Istwert definiert den Fehler. Über den Regler wird entsprechend die Stellgrösse, in diesem Fall der Erregerstrom $I_{err}$, angepasst. Grundsätzlich gilt; je höher der Erregerstrom, desto höher die Statorspannung. \\
 Die Statorspannung wird zuerst konvertiert, damit sie mit der Sollgrösse verglichen werden kann.
-\textcolor{red}{evtl. KOnvertierungsmethode (Schema auf dem Chopper erklären - oder auch nicht :))}
+%\textcolor{red}{evtl. KOnvertierungsmethode (Schema auf dem Chopper erklären - oder auch nicht :))}
 
 \newpage
 
