Nr hinzugefügt und ein paar Schreibfehler korrigiert. Mache morgen dann noch den Rest (Zeigerdiagramm)

--- a/Versuch.tex
+++ b/Versuch.tex
@@ -46,25 +46,25 @@ Schleifring ASM &10 kW &2&50 Hz& 230/400 V& 1420 $\frac{1}{min}$\\
  \hline
  Messtrennverstärker 1  & ET11002  \\
 \hline
-Messtrennverstärker 2  & xxx  \\
+Messtrennverstärker 2  & ET11006  \\
 \hline
-Amperezange  & 431  \\
+Amperezange kleine Ströme & 431  \\
 \hline
-Oszilloskop  & xxx  \\
+Amperezange grpsse Ströme & 544  \\
 \hline
-Multimeter  & xxx  \\
+Oszilloskop  & 525  \\
 \hline
-Drehzahl-und Drehmomentmessung  & -  \\
+Multimeter  & S20  \\
 \hline
-Polradwinkel-Messgerät  & -  \\
+Drehzahl-und Drehmomentmessung  & 210  \\
 \hline
-Dreiphasiges Leistungsmessgerät PM 3000  & -  \\
+Dreiphasiges Leistungsmessgerät PM 3000  & ET11071  \\
 \hline
-Wattmeter   & -  \\
+Synchronoskop   & 211  \\
 \hline
 \end{tabular}
 
-\textcolor{red}{TODO: restliche Nr. ermitteln}
+
 
 
 \subsection{Speisungen und Belastungen}
