--- a/Versuch.tex
+++ b/Versuch.tex
@@ -93,6 +93,13 @@ Die GM wird so eingestellt, dass sie beim Einschalten auf eine Drehzahl von 1500
 \subsection{ASM}
 Die Asynchronmaschine wird im späteren Verlauf als Dämpfung für den SM genutzt. 
 Da es sich um eine Schleifringläufer ASM handelt, kann über den Rotorkreis ein Widerstand zugeschalten werden. Dieser begrenzt den Anlaufstrom. Nach dem Hochfahren werden die Schleifringe kurzgeschlossen und die ASM kann als Kurzschlussläufer betrachtet werden.
+\begin{figure}[H]
+    \centering
+        \includegraphics[ trim=0cm 11cm 0cm 4.5cm,
+         clip, width=\textwidth]{DSCN2903}
+    \caption{Übersicht der Maschinen SM (l), GM (m) und ASM (r)}
+    \label{fig:Maschinenuebersicht}
+\end{figure}
 
 
 \newpage
