--- a/Versuch.tex
+++ b/Versuch.tex
@@ -734,9 +734,28 @@ Für diesen Versuchsaufbau wurde die SM mit einem Nennerregerstrom von 1.1A betr
 \end{tabular}
 
 
+\\
+\vspace{1cm}
 
 
-\textcolor{red}{TODO\\-Zeigerdiagramme Skizzieren\\-Erkenntnisse beschreiben}
+
+\begin{figure}[H]
+\begin{minipage}[t]{0.65\textwidth}
+\centering
+\includegraphics[width=\textwidth]{SM_Insel_1PH_L.pdf}
+\subcaption{Schema induktive Last im EZS}
+\label{fig:SM_Insel_1PH_L}
+\end{minipage}
+\begin{minipage}[t]{0.3\textwidth}
+\centering
+\includegraphics[width=0.5\textwidth]{631_zeiger_ind}
+\subcaption{Zeigerdiagramm im EZS}
+    \label{fig:ZeigerL}
+\end{minipage}
+\end{figure}
+
+
+
 
 
 \newpage
