variation der Wirkleistung done

--- a/Versuch.tex
+++ b/Versuch.tex
@@ -725,32 +725,33 @@ Für diesen Versuchsaufbau wurde die SM mit einem Nennerregerstrom von 1.1A betr
  \rowcolor[gray]{.8}  $M$ [Nm] &  $\varphi$ [\degree]&  $S_1$  [kVA]&$P_1$ [kW]& $I_1$ [A] &Bemerkung\\
 \hline
 \hline
- -10 & -2.2 & 0.51 & 0.5& 2.2& -\\
+ -10 & -2.2 & 0.51 & 0.5& 2.2& (a)\\
 \hline
- -20 & -5.3 & 1.035 & 1.03& 4.4  & -\\
+ -20 & -5.3 & 1.035 & 1.03& 4.4  & (b)\\
 \hline
--30& -8.8 & 1.56 & 1.55 & 6.7 &-\\
+-30& -8.8 & 1.56 & 1.55 & 6.7 &(c)\\
 \hline
 \end{tabular}
 
-
-\\
 \vspace{1cm}
 
 
 
 \begin{figure}[H]
-\begin{minipage}[t]{0.65\textwidth}
+\begin{minipage}[t]{0.3\textwidth}
 \centering
-\includegraphics[width=\textwidth]{SM_Insel_1PH_L.pdf}
-\subcaption{Schema induktive Last im EZS}
-\label{fig:SM_Insel_1PH_L}
+\includegraphics[width=0.6\textwidth]{wirk_1}
+\subcaption{}
 \end{minipage}
 \begin{minipage}[t]{0.3\textwidth}
 \centering
-\includegraphics[width=0.5\textwidth]{631_zeiger_ind}
-\subcaption{Zeigerdiagramm im EZS}
-    \label{fig:ZeigerL}
+\includegraphics[width=0.8\textwidth]{wirk_2}
+\subcaption{}
+\end{minipage}
+\begin{minipage}[t]{0.3\textwidth}
+\centering
+\includegraphics[width=0.8\textwidth]{wirk_3}
+\subcaption{}
 \end{minipage}
 \end{figure}
 
