variation der Blindleistung done

--- a/Versuch.tex
+++ b/Versuch.tex
@@ -787,6 +787,25 @@ Für diesen Versuch wurde die ASM elektrisch entkoppelt (Rotorkreis offen).Über
 
 
 
+\begin{figure}[H]
+\begin{minipage}[t]{0.3\textwidth}
+\centering
+\includegraphics[width=0.8\textwidth]{blind_unter}
+\subcaption{Untererregung (Q positiv)}
+\end{minipage}
+\begin{minipage}[t]{0.3\textwidth}
+\centering
+\includegraphics[width=0.6\textwidth]{blind_nenn}
+\subcaption{Nennbetriebspunkt}
+\end{minipage}
+\begin{minipage}[t]{0.3\textwidth}
+\centering
+\includegraphics[width=0.6\textwidth]{blind_ueber}
+\subcaption{Übererregung (Q negativ)}
+\end{minipage}
+\end{figure}
+
+
 \textcolor{red}{TODO\\-Zeigerdiagramme skizzieren \\-V-Kurve (I1 in abhängigkeit von Ierr) Skizzieren (bei 0.5kW und 5kW)\\-Erkenntnisse\\-Blindleistung berechnen mit Wattmeter: https://de.wikipedia.org/wiki/Blindleistung --> Unten bei \textbf{Symmetrische Belastung}}
 
 
