--- a/Versuch.tex
+++ b/Versuch.tex
@@ -785,28 +785,38 @@ Für diesen Versuch wurde die ASM elektrisch entkoppelt (Rotorkreis offen).Über
 \hline
 \end{tabular}
 
-
+\subsubsection{Zeigerdiagramme}
 
 \begin{figure}[H]
 \begin{minipage}[t]{0.3\textwidth}
 \centering
-\includegraphics[width=0.8\textwidth]{blind_unter}
+\includegraphics[width=0.7\textwidth]{blind_unter}
 \subcaption{Untererregung (Q positiv)}
 \end{minipage}
 \begin{minipage}[t]{0.3\textwidth}
 \centering
-\includegraphics[width=0.6\textwidth]{blind_nenn}
+\includegraphics[width=0.5\textwidth]{blind_nenn}
 \subcaption{Nennbetriebspunkt}
 \end{minipage}
 \begin{minipage}[t]{0.3\textwidth}
 \centering
-\includegraphics[width=0.6\textwidth]{blind_ueber}
+\includegraphics[width=0.5\textwidth]{blind_ueber}
 \subcaption{Übererregung (Q negativ)}
 \end{minipage}
 \end{figure}
+\newpage
+
+\subsubsection{V-Kurve}
+
+Die V-Kure visualisiert den Zusammenhang zwischen dem Erregerstrom und dem Phasenstrom.\\
+An der Abbildung ist zu erkennen, dass der Phasenstrom bei Nennerregung minimal ist. Die Maschine ist in diesem Punkt weder unter-/ noch überregt.
 
 
-\textcolor{red}{TODO\\-Zeigerdiagramme skizzieren \\-V-Kurve (I1 in abhängigkeit von Ierr) Skizzieren (bei 0.5kW und 5kW)\\-Erkenntnisse\\-Blindleistung berechnen mit Wattmeter: https://de.wikipedia.org/wiki/Blindleistung --> Unten bei \textbf{Symmetrische Belastung}}
+\begin{figure}[H]
+    \centering
+        \includegraphics[width=0.8\textwidth]{v_diagramm.pdf}
+    \caption{V-Kurve}
+\end{figure}
 
 
 
