--- a/Einleitung.tex
+++ b/Einleitung.tex
@@ -9,7 +9,7 @@
 \section*{Einleitung}
 Im Rahmen des Moduls Leistungselektronik und elektrische Antriebssysteme (EAT) stehen mehrere Labortage zur Verfügung um das theoretische Wissen zu festigen und ein praktisches Verständnis zu erhalten. 
 Unterschiedliche Aufgabenstellungen zu verschiedenen Themen aus dem Unterricht können dazu genutzt werden.
-Zu einer der Aufgabenstellungen soll ein Laborbericht verfasst werden.\\
+Zu einer der Aufgabenstellungen soll anschliessend ein Laborbericht verfasst werden.\\
 
 Dieses Dokument setzt sich mit der Synchronmaschine auseinander und fasst den Schaltungsaufbau, die Messresultate und die Erkenntnisse daraus zusammen.\\
 Insbesondere wird das Verhalten der SM am Netz als Generator und Motor, sowie als Generator im Inselbetrieb untersucht.
