--- a/Versuch.tex
+++ b/Versuch.tex
@@ -6,7 +6,13 @@
 \subsection{Laboreinrichtung}
 
 
-hier Foto von Versuchsaufbau allgemein, mit den drei Maschinen
+\begin{figure}[H]
+    \centering
+        \includegraphics[ trim=0cm 11cm 0cm 4.5cm,
+         clip, width=\textwidth]{DSCN2903}
+    \caption{Übersicht der Maschinen SM (l), GM (m) und ASM (r)}
+    \label{fig:Maschinenuebersicht}
+\end{figure}
 
 \subsection{Maschinensatz}
 
@@ -86,20 +92,14 @@ Kastenwiderstand & Belastung ohmsch  \\
 
 \newpage
 \section{Inbetriebsetzung}
-Als erstes sollen die Gleichstrommaschine sowie die ASM in Betrieb genommen werden und für die folgenden Messungen eingestellt werden.
+Als erstes sollen die Gleichstrommaschine und die ASM in Betrieb genommen werden und für die folgenden Messungen eingestellt werden.
 \subsection{Gleichstrommaschine}
 Die GM wird so eingestellt, dass sie beim Einschalten auf eine Drehzahl von 1500 $\frac{1}{min}$ hochfährt. Dies entspricht gerade der Nenndrehzahl der SM.
 
 \subsection{ASM}
 Die Asynchronmaschine wird im späteren Verlauf als Dämpfung für den SM genutzt. 
-Da es sich um eine Schleifringläufer ASM handelt, kann über den Rotorkreis ein Widerstand zugeschalten werden. Dieser begrenzt den Anlaufstrom. Nach dem Hochfahren werden die Schleifringe kurzgeschlossen und die ASM kann als Kurzschlussläufer betrachtet werden.
-\begin{figure}[H]
-    \centering
-        \includegraphics[ trim=0cm 11cm 0cm 4.5cm,
-         clip, width=\textwidth]{DSCN2903}
-    \caption{Übersicht der Maschinen SM (l), GM (m) und ASM (r)}
-    \label{fig:Maschinenuebersicht}
-\end{figure}
+Da es sich um eine Schleifringläufer-ASM handelt, kann über den Rotorkreis ein Widerstand zugeschaltet werden. Dieser begrenzt den Anlaufstrom. Nach dem Hochfahren werden die Schleifringe kurzgeschlossen und die ASM kann als Kurzschlussläufer betrachtet werden.
+
 
 
 \newpage
