--- a/Schlussteil.tex
+++ b/Schlussteil.tex
@@ -3,18 +3,16 @@
 
 
 \section{Erkenntnisse}
-Der Laborversuch \flqq{}Synchronmaschine\frqq{} dient zum einen als Repetition der Theorie und bringt zum andern einen praktischen Bezug zu Maschinenkennwerten. Kern des Versuches bildet die Ermittlung der Maschinenkennwerte (Abschnitt \ref{maschinenkennwerte}). Daraus resultiert die Erfahrung, wie eine Maschine auf Grund von Messungen klassifiziert werden kann. Besonders interessant und lehrreich ist dabei die Anwendung des Schwebeverfahren (Abschnitt \ref{schwebeverfahren}). Durch dessen Anwendung lässt sich der Einfluss des Luftspaltes bei einer Schenkelpolmaschine auf die Induktivität im Ersatzschaltbild gut repetieren.\\
-Der Versuchsteil der die SM als Generator im Inselbetrieb (Abschnitt \ref{inselbetrieb}) verwendet, dient als ergiebige Übung zum Erstellen von Zeigerdiagrammen. Ausserdem ermöglicht er den Vergleich von Resultaten, die auf verschiedenen Wegen gemessen und errechnet wurden. Dies zeigt auf, wie die Messungen von einander abweichen und welchen Einfluss Vernachlässigungen haben. Der letzte Versuchsteil mit der SM am Netz (Abschnitt \ref{netz}) bringt vor allem anwendungsbezogene Erfahrungen. Es zeigt sich welchen Aufwand die nötige Synchronisation bringt und welche Bedeutung eine Dämpferwicklung hat.   
+Der Laborversuch ''Synchronmaschine'' dient zum einen als Repetition der Theorie und bringt zum andern einen praktischen Bezug zu Maschinenkennwerten. Kern des Versuches bildet die Ermittlung der Maschinenkennwerte (Abschnitt \ref{maschinenkennwerte}). Daraus resultiert die Erfahrung, wie eine Maschine aufgrund von Messungen klassifiziert werden kann. Besonders interessant und lehrreich ist dabei die Anwendung des Schwebeverfahren (Abschnitt \ref{schwebeverfahren}). Durch dessen Anwendung lässt sich der Einfluss des Luftspaltes bei einer Schenkelpolmaschine auf die Induktivität im Ersatzschaltbild anschaulich repetieren.\\
+Der Versuchsteil der die SM als Generator im Inselbetrieb (Abschnitt \ref{inselbetrieb}) behandelt, dient als ergiebige Übung zum Erstellen von Zeigerdiagrammen. Ausserdem ermöglicht er den Vergleich von Resultaten, die auf verschiedenen Wegen gemessen und errechnet wurden. Dies zeigt auf, wie die Messungen von einander abweichen und welchen Einfluss Vernachlässigungen haben. Der letzte Versuchsteil mit der SM am Netz (Abschnitt \ref{netz}) bringt vor allem anwendungsbezogene Erfahrungen. Es zeigt sich welchen Aufwand die nötige Synchronisation bringt und welche Bedeutung eine Dämpferwicklung hat.   
 
 
 \section{Fazit} %über gelerntes und Kommentare
-Die Versuche erschienen uns sehr sinnvoll und wir konnten viele Unklarheiten ausfindig machen und klären. Theorie und Praxis liessen sich optimal kombinieren. Der Stoff vom Unterricht konnte hervorragend repetiert werden und unser Bild der SM besteht nun nicht mehr nur aus einem Ersatzschaltbild. Die Versuchsreihe lässt sich in den zwei Nachmittagen zeitlich gut durchführen, falls das Labor seriös Vorbereitet wurde (es Reicht auch für die freiwilligen Teile). Trotzdem erscheinen uns freiwilligen Teile als Sinnvoll, damit die Klärung von allenfalls auftretende Unklarheiten Platz haben. Von uns ausgesehen sind alle Teilaufgaben sinnvoll und lehrreich.
+Die Versuche erschienen uns sehr sinnvoll und wir konnten viele Unklarheiten  klären. Theorie und Praxis liessen sich optimal kombinieren. Der Stoff vom Unterricht konnte hervorragend repetiert werden und unser Bild der SM besteht nun nicht mehr nur aus einem Ersatzschaltbild. Die Versuchsreihe lässt sich in den 2 Nachmittagen zeitlich gut durchführen. Insbesondere auch die freiwilligen Aufgaben erschienen uns als sehr nützlich. Aus unserer Sicht sind die Teilaufgaben sinnvoll und lehrreich aufgebaut.
 
 
 
-\section{Verzeichnisse}
+%\section{Verzeichnisse}
 
-\addcontentsline{toc}{subsection}{Abbildungsverzeichnis}
-\listoffigures
-
-\section{Anhang}
+%\addcontentsline{toc}{subsection}{Abbildungsverzeichnis}
+%\listoffigures
