--- a/Versuch.tex
+++ b/Versuch.tex
@@ -809,7 +809,7 @@ Für diesen Versuch wurde die ASM elektrisch entkoppelt (Rotorkreis offen).Über
 \subsubsection{V-Kurve}
 
 Die V-Kure visualisiert den Zusammenhang zwischen dem Erregerstrom und dem Phasenstrom.\\
-An der Abbildung ist zu erkennen, dass der Phasenstrom bei Nennerregung minimal ist. Die Maschine ist in diesem Punkt weder unter-/ noch überregt.
+An der Abbildung ist zu erkennen, dass der Phasenstrom bei Nennerregung minimal ist. Die Maschine ist in diesem Punkt weder unter-/ noch übererregt.
 
 
 \begin{figure}[H]
